  LFUN_MATH_NUMBER_TOGGLE.

- The function LFUN_MATH_NONUMBER, "math-nonumber", has been renamed to
  LFUN_MATH_NUMBER_LINE_TOGGLE.

- The function LFUN_CHARSTYLE_INSERT, "charstyle-insert", has been renamed to 
  LFUN_FLEX_INSERT, "flex-insert". It now handles beside charstyles, also 
  custom insets and XML short element insets.

The following new LyX functions have been introduced:

- LFUN_SPECIALCHAR_INSERT, "specialchar-insert" (see above).

- LFUN_LINE_BREAK, "line-break".

- LFUN_PAGEBREAK_INSERT, "pagebreak-insert".


Known issues in version 1.5.2
------------------------------------

- LyX might crash if you switch the encoding of a document while the
  View->Source pane is opened.
  http://bugzilla.lyx.org/show_bug.cgi?id=3561

- LyX might suddenly slow down when you have copied something in another
  instance of LyX or in another application. Known workaround: Ctrl+C of
  some text inside the active window bring the speed back.
  http://bugzilla.lyx.org/show_bug.cgi?id=4045

- Cursor restoration problems with Multiple-View:
  When using multiple Windows to edit different parts of the
  same document, the cursor position is sometimes not correctly restored
  when you switch from one view to the other.

- RTL and keymaps:
  Currently there is a bug where you can't use two non-RTL language keymaps if
  the RTL preference is set (which is now the default). If you need to use two
  non-RTL keymaps, for now you should just turn off the RTL preference (Tools -> 
  Preferences... -> Language settings -> Language, uncheck "Right-to-left
  language support").
  We hope to offer more comprehensive support for multiple keymaps in the future,
  which will solve this bug, as well as allow more than just two keymaps. If you 
  have any input on this issue, please chime in on the developers mailing list,
  or add your comments to http://bugzilla.lyx.org/show_bug.cgi?id=4051.


Caveats when upgrading from earlier versions to 1.5.x