@@ -231,7 +231,7 @@ enum kb_action {
 	LFUN_BUFFER_EXPORT,             // Lgb 97-07-29
 	// 165
 	LFUN_LABEL_GOTO,                // Ale 970806
-	LFUN_TOGGLE_CURSOR_FOLLOWS_SCROLLBAR, // ARRae 971202
+	LFUN_CURSOR_FOLLOWS_SCROLLBAR_TOGGLE, // ARRae 971202
 	LFUN_BUFFER_CHKTEX,             // Asger 971030
 	LFUN_HYPERLINK_INSERT,          // CFO-G 971121
 	LFUN_WORD_FIND_FORWARD,         // Etienne 980216
