@@ -43,6 +43,10 @@ Some of the LyX functions have changed names:
   LFUN_FLEX_INSERT, "flex-insert". It now handles beside charstyles, also 
   custom insets and XML short element insets.
 
+- The function LFUN_TOGGLE_CURSOR_FOLLOWS_SCROLLBAR, "toggle-cursor-follows-scrollbar"
+  has been renamed to LFUN_CURSOR_FOLLOWS_SCROLLBAR_TOGGLE,
+  "cursor-follows-scrollbar-toggle".
+
 The following new LyX functions have been introduced:
 
 - LFUN_SPECIALCHAR_INSERT, "specialchar-insert" (see above).
